--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -2,7 +2,7 @@
 {% block page_title %}Buy Products{% endblock %}
 
 {% block hero %}
-<div class="col-md-6">
+<div class="col-md-12 text-center">
   <h1>Buy Our Lovely UniCoins</h1>
 </div>
 {% endblock %}
