--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,44 +1,49 @@
 {% extends 'base.html' %}
-{% load static from staticfiles %}
 {% load bootstrap_tags %}
 
+{% block page_title %}Cart{% endblock %}
+
+{% block hero %}
+<div class="col-md-12 text-center">
+  <h1>Your Shopping Cart</h1>
+</div>
+{% endblock %}
+
 {% block content %}
+<section class="cart">
 <div class="container">
-<div class="row row-flex">
-    {% for item in cart_items %}
-    
-    <div class="col-md-4 ">
-        
-        <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-        
-        <div class="caption">
-            <h3>{{ item.product.name }}</h3>
-            <p class="product-description">{{ item.product.description }}</p>
-            <p>{{ item.product.price }}</p>
-            <p>
+<div class="row">
+  <div class="col-12 text-center">
+    <p>To Remove An Item, Change Qty To 0</p>
+  </div>
+  {% for item in cart_items %}
+   <div class="col-sm-8 mx-auto cart-product">
+        <h3>{{ item.product.name }}</h3>
+        <p class="product-description">{{ item.product.description }}</p>
+        <p>£ {{ item.product.price }}</p>
+
+          <form class="form" method="post" action="{% url 'adjust_cart' item.id %}">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="quantity" class="">Qty</label>
+              
+                <input name="quantity" type="number" min="0" max="999" class="col-sm-2" value="{{item.quantity}}">
                 
-                <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="exampleInputAmount" class="sr-only">New Qty</label>
-                        <div class="input-group">
-                            <div class="input-group-addon">Qty</div>
-                            <input name="quantity" type="number" min="0" max="999" class="form-control" value="{{item.quantity}}">
-                            <div class="input-group-addon"></div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
-                </form>
-            </p>
-        </div>
+                <button type="submit" class="btn btn-primary"><span></span>Amend</button>
+              </div>
+          </form>
+          <hr>
     </div>
     {% endfor %}
 </div>
 <div class="row">
+    <div class="col-sm-12 text-center">
     <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+    <p>£ {{ total }}</p>
+    <a href="{% url 'checkout' %}" class="btn btn-lg btn-success" role="button"><span></span>Checkout</a>
+    </div>
 </div>
 </div>
+</section>
 
 {% endblock %}
