--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
               <a class="dropdown-item" href="{% url 'register' %}">Register</a>
               {% endif %}
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">How We're Doing</a>
+              <a class="dropdown-item" href="{% url 'charts' %}">How We're Doing</a>
             </div>
           </li>
 
