--- a/charts/templates/charts.html
+++ b/charts/templates/charts.html
@@ -11,10 +11,150 @@
 <section class="charts">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 mx-auto">
-        <p>This Is where the chart will go</p>
+      <div class="col-md-6">
+        <canvas id="myChart1" width="400" height="400"></canvas>
+      </div>
+      
+      <div class="col-md-6">
+        <canvas id="myChart2" width="400" height="400"></canvas>
+        <br>
+        <br>
+        <br>
+      </div>
+      
+      <div class="col-md-6 mx-auto">
+        <canvas id="myChart3" width="400" height="400"></canvas>
       </div>
     </div>
   </div>
 </section>
+
+
+
+<script>
+  var url = '/charts/data/'
+  var defaultData = [];
+  var labels = [];
+  var dataMonth = [];
+  var dataYear = [];
+  $.ajax({
+    method: "GET",
+    url: url,
+    success: function(data){
+      labels = data.labels;
+      defaultData = data.items;
+      dataMonth = data.itemsmonth;
+      dataYear= data.itemsyear;
+      console.log(data);
+      createChart1();
+      createChart2();
+      createChart3();
+    },
+    error: function(error_data){
+      console.log("error");
+      console.log(error_data);
+    }
+  });
+  
+  
+  function createChart1(){
+    var ctx = document.getElementById("myChart1").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: labels,
+        datasets: [{
+            label: 'Bugs and Features Completed Today',
+            data: defaultData,
+            backgroundColor: [
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+            ],
+            borderColor: [
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    }
+});
+  }
+  
+
+  function createChart2(){
+    var ctx = document.getElementById("myChart2").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: labels,
+        datasets: [{
+            label: 'Bugs and Features Completed This Month',
+            data: dataMonth,
+            backgroundColor: [
+                'rgba(255, 123, 134, 0.2)',
+                'rgba(75, 124, 192, 0.2)',
+            ],
+            borderColor: [
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    }
+});
+  }
+  
+  
+  
+  function createChart3(){
+    var ctx = document.getElementById("myChart3").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: labels,
+        datasets: [{
+            label: 'Bugs and Features Completed This Year',
+            data: dataYear,
+            backgroundColor: [
+                'rgba(255, 123, 6, 0.2)',
+                'rgba(255, 34, 12, 0.2)',
+            ],
+            borderColor: [
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    }
+});
+  }
+</script>
+
 {% endblock %}
