--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <title>{% block page_title %}{% endblock %}</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
   {% block head_js %}{% endblock %}
 </head>
 
