--- a/issues/templates/featuredetail.html
+++ b/issues/templates/featuredetail.html
@@ -37,6 +37,30 @@
 </section>
 
 
+<section class="comments">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h3>Comments</h3>
+        {% if user.is_authenticated %}
+        <a href="{% url 'add_feature_comment' feature.id %}" class="btn btn-success">Add Comment</a>
+        {% endif %}
+        <hr>
+      </div>
+    </div>
+    <div class="row">
+      {% if comments %}
+        {% for comment in comments %}
+        <div class="col-sm-8 mx-auto comment">
+          <p class=" text-warning"><i class="fas fa-user"></i> {{ comment.creator}}&nbsp;&nbsp; <i class="fas fa-calendar-alt"></i> {{ comment.date_created }}</p>
+          <p>{{ comment.text }}</p>
+          <hr>
+        </div>
+        {% endfor %}
+      {% endif %}
+    </div>
+  </div>
+</section>
 
 
 
