Added some helpful comments

--- a/charts/templates/charts.html
+++ b/charts/templates/charts.html
@@ -29,7 +29,8 @@
   </div>
 </section>
 
-
+<!-- BELOW IS THE CODE TO MAKE THE CHARTS. I USED CHART JS TO DISPLAY AS
+    THEY ARE RESPONSIVE AND ASTHETICALLY PLEASING-->
 
 <script>
   var url = '/charts/data/'
