--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -25,7 +25,7 @@
 </div>
 {% endblock %}
 
-
+<!-- LANDING PAGE FOR ATTRACTOR APP-->
 {% block content %}
 <section class="intro">
   <div class="container">
