--- a/pages/templates/issuetracker.html
+++ b/pages/templates/issuetracker.html
@@ -12,6 +12,9 @@
 {% endblock %}
 
 
+<!--THERE IS A LOT OF INFORMATION BEING DISPLAYED HERE
+    I HAVE KEPT IT TIDY AND MORE IMPORTANTLY RESPONSIVE FOR MOBILE DEVICES-->
+
 {% block content %}
 <section class="issue-intro text-center">
   <div class="container">
@@ -331,7 +334,9 @@
     </div>
     
     
-    
+
+
+<!--I HAVE USED AJAX TO DEAL WITH THE UPVOTES, THIS WAY IS A MUCH BETTER USER EXPERIENCE-->
 <script>
 $(".upvote-btn").click(function() {
   
