--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/lumen/bootstrap.min.css" />
   <!-- FONTAWESOME -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  
+  <!--CUSTOM STYLESHEET-->
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  
   <title>{% block page_title %}{% endblock %}</title>
+    <!--JQUERY AND CHART JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
   {% block head_js %}{% endblock %}
 </head>
 
 <body>
+  <!--NAVIGATION SECTION-->
   <nav class="navbar navbar-expand-md navbar-dark bg-primary">
     <div class="container">
       <a class="navbar-brand" href="{% url 'home' %}"><span class="d-none d-sm-inline">UniAttractor </span><img src="{{ MEDIA_URL }}images/unicorn.png" style="height:24px; width:34px;"></a>
@@ -95,7 +100,10 @@
       </div>
     </div>
   </nav>
+  <!--NAVIGATION SECTION END-->
   
+  
+  <!--MESSAGES Sit just above hero, where they can be seen very clearly-->
   {% if messages %}
     {% for message in messages %}
     <div class="alert alert-dismissable alert-{{ message.tags }} mb-0 text-center">
@@ -105,10 +113,11 @@
     {% endfor %}
   {% endif %}
   
+  
+  
   <section class="hero">
     <div class="container">
       <div class="row">
-
         {% block hero %}{% endblock %}
       </div>
     </div>
